--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -473,6 +473,12 @@ body {
 }
 
 .thumbnail-item:hover {
+  border: 1px solid #f7f0e9;
+  border-radius: 5px;
+  box-shadow: -3px 3px 9px -8px rgba(0,0,0,0.75);
+}
+
+.thumbnail-item.active {
   border: 1px solid #ACCEF7;
   border-radius: 5px;
   box-shadow: -3px 3px 9px -8px rgba(0,0,0,0.75);
