--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -124,7 +124,7 @@
           {{/animated-if}}
         </AnimatedContainer>
       </div>
-      <div id="about-end"></div>
+      <div class="nav-divider-end" id="about-end"></div>
 
       <div class="seperator" id="tech">
         <div class="seperator-line-left"></div>
@@ -322,7 +322,7 @@
           </div>
         </div>
       </div>
-      <div id="tech-end"></div>
+      <div class="nav-divider-end" id="tech-end"></div>
 
       <div class="seperator" id="contact">
         <div class="seperator-line-left"></div>
@@ -344,7 +344,7 @@
        </a>
       </div>
     </div>
-    <div id="contact-end"></div>
+    <div class="nav-divider-end" id="contact-end"></div>
   </div>
 
 
