fixed janky nav

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <div class="body" id="about">
+  <div class="body" id="about-start">
     <div class="content">
       <div class="about-container">
         <div class="about-tiles">
@@ -124,9 +124,11 @@
           {{/animated-if}}
         </AnimatedContainer>
       </div>
-      <div class="nav-divider-end" id="about-end"></div>
 
-      <div class="seperator" id="tech">
+      <div class="nav-divider" id="about-end"></div>
+      <div class="nav-divider" id="tech-start"></div>
+
+      <div class="seperator">
         <div class="seperator-line-left"></div>
         <h2 class="seperator-title">
           Technologies / Skills
@@ -322,9 +324,11 @@
           </div>
         </div>
       </div>
-      <div class="nav-divider-end" id="tech-end"></div>
 
-      <div class="seperator" id="contact">
+      <div class="nav-divider" id="tech-end"></div>
+      <div class="nav-divider" id="contact-start"></div>
+
+      <div class="seperator">
         <div class="seperator-line-left"></div>
         <h2 class="seperator-title">
           Contact
