added nav fix to mobile

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -383,7 +383,7 @@
     </div>
   </div>
 
-  <div class="body" id="about">
+  <div class="body" id="about-start">
     <div class="content mobile">
       <div class="about-container">
         <div class="about-tiles mobile">
@@ -492,7 +492,9 @@
           {{/if}}
         </div>
       </div>
-      <div id="about-end"></div>
+
+      <div class="nav-divider" id="about-end"></div>
+      <div class="nav-divider" id="tech-start"></div>
 
       <div class="seperator mobile" id="tech">
         <div class="seperator-line-left mobile"></div>
@@ -694,9 +696,11 @@
           </div>
         </div>
       </div>
-      <div id="tech-end"></div>
 
-      <div class="seperator mobile" id="contact">
+      <div class="nav-divider" id="tech-end"></div>
+      <div class="nav-divider" id="contact-start"></div>
+
+      <div class="seperator mobile">
         <div class="seperator-line-left mobile"></div>
         <h2 class="seperator-title mobile">
           Contact
