--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -14,8 +14,9 @@ body {
 .header {
   position: absolute;
   width: 100%;
-  background-color: #4572ba;
-  height: 140px;
+  background: rgb(79,152,199);
+  background: linear-gradient(90deg, rgba(79,152,199,1) 24%, rgba(46,111,182,1) 74%);
+  height: 110px;
   padding: 0;
   margin-bottom: 5px;
   box-shadow: 0px 5px 4px -5px rgba(0,0,0,0.75);
@@ -30,7 +31,8 @@ body {
 .sticky {
   width: 100%;
   position: fixed;
-  background-color: #4572ba;
+  background: rgb(79,152,199);
+  background: linear-gradient(90deg, rgba(79,152,199,1) 24%, rgba(46,111,182,1) 74%);
   height: 30px;
   padding: 0;
   margin-bottom: 50px;
@@ -44,7 +46,7 @@ body {
 }
 
 .header-content {
-  height: 110px;
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -57,7 +59,7 @@ body {
 }
 
 .header-img {
-  width: 220px;
+  width: 200px;
   margin-bottom: 15px;
 }
 
@@ -156,7 +158,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin-top: 140px;
+  margin-top: 110px;
   height: 100%;
 }
 
@@ -268,8 +270,8 @@ body {
 .about-tile-img-text-2 {
   position: absolute;
   top: 20%;
-  right: 45%;
-  width: 54%;
+  right: 40%;
+  width: 58%;
 }
 
 .about-tile-img-text-2.mobile {
@@ -295,7 +297,7 @@ body {
   position: absolute;
   top: 20%;
   right: 43%;
-  width: 54%;
+  width: 56%;
 }
 
 .about-tile-img-text-4.mobile {
