--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -338,7 +338,7 @@ body {
   width: fit-content;
   display: flex;
   flex-direction: column;
-  box-shadow: 0px 0px 5px -4px rgba(0,0,0,0.75);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   background-color: white;
   border-left: 1px solid #bababa;
   border-right: 1px solid #bababa;
