--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -66,7 +66,7 @@
                   <br><br>
                   He is passionate about building beautiful, responsive, and robust web applications.
                   <br><br>
-                  <a class="about-content-link" href="/assets/cv.pdf">Download CV</a>
+                  <a class="about-content-link" href="/assets/cv1.pdf">Download CV</a>
                 </p>
               </div>
             </div>
@@ -439,7 +439,7 @@
                     He has experience working in frontend, backend, android and desktop development.
                     <br><br>
                     He is passionate about building beautiful, responsive, and robust web applications.
-                    <a class="about-content-link" href="/assets/cv.pdf">Download CV</a>
+                    <a class="about-content-link" href="/assets/cv1.pdf">Download CV</a>
                   </p>
                 </div>
               {{/animated-if}}
