trying to fix img loading issue

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -35,20 +35,20 @@
       <div class="about-container">
         <div class="about-tiles">
           <div class="about-tile" onclick={{action "tileSelected" 'about'}}>
-            <img class="about-tile-img-bg" src="/images/code.jpg">
+            <img class="about-tile-img-bg" src="/images/code1.jpg">
             <img class="about-tile-img-text-1" src="/images/about.png">
           </div>
           <div class="about-tile" onclick={{action "tileSelected" 'career'}}>
-            <img class="about-tile-img-bg" src="/images/career.jpg">
+            <img class="about-tile-img-bg" src="/images/career1.jpg">
             <img class="about-tile-img-text-2" src="/images/career.png">
           </div>
           <div class="about-tile" onclick={{action "tileSelected" 'education'}}>
-            <img class="about-tile-img-bg" src="/images/education.jpg">
+            <img class="about-tile-img-bg" src="/images/education1.jpg">
             <img class="about-tile-img-text-3" src="/images/education.png">
           </div>
           <div class="about-tile" onclick={{action "tileSelected" 'awards'}}>
-            <img class="about-tile-img-bg" src="/images/awards.jpg">
-            <img class="about-tile-img-text-4" src="/images/awards.png">
+            <img class="about-tile-img-bg" src="/images/awards1.jpg">
+            <img class="about-tile-img-text-4" src="/images/awardsTitle.png">
           </div>
         </div>
         <AnimatedContainer class="about-content-animated-container">
@@ -58,7 +58,7 @@
                 <img class="about-content-header-text" src="/images/about.png" width="80px">
               </div>
               <div class="about-content-container">
-                <img class="about-content-img" src="/images/me.jpg" width="200px" height="200px">
+                <img class="about-content-img" src="/images/me1.jpg" width="200px" height="200px">
                 <p class="about-content-text">
                   Shane is a freelance software and web developer from Dublin, Ireland.
                   <br><br>
@@ -77,7 +77,7 @@
                 <img class="about-content-header-text" src="/images/career.png" width="100px">
               </div>
               <div class="about-content-container">
-                <img class="about-content-img" src="/images/working.jpg" width="300px" height="200px">
+                <img class="about-content-img" src="/images/working1.jpg" width="300px" height="200px">
                 <p class="about-content-text">
                   Shane has experience in both small startups and large corporations, working with a wide range of technologies.
                   <br><br>
@@ -96,7 +96,7 @@
                 <img class="about-content-header-text" src="/images/education.png" width="130px">
               </div>
               <div class="about-content-container">
-                <img class="about-content-img" src="/images/dcu.jpg" width="300px" height="200px">
+                <img class="about-content-img" src="/images/dcu1.jpg" width="300px" height="200px">
                 <p class="about-content-text">
                   Shane graduated from Dublin City University in 2017 with an honours degree in Computer Science.
                   <br><br>
@@ -110,10 +110,10 @@
           {{#animated-if (eq this.currentSection 'awards') duration=750 use=this.transitionMove}}
             <div class="about-content">
               <div class="about-content-header">
-                <img class="about-content-header-text" src="/images/awards.png" width="110px">
+                <img class="about-content-header-text" src="/images/awardsTitle.png" width="110px">
               </div>
               <div class="about-content-container">
-                <img class="about-content-img" src="/images/openet.jpeg" width="250px" height="200px">
+                <img class="about-content-img" src="/images/openet1.jpeg" width="250px" height="200px">
                 <p class="about-content-text">
                   Shane was awarded Most Innovative Project at the Dublin City University 2017 final year project expo.
                   <br><br>
