fixed mobile tile titles

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -395,7 +395,7 @@
           <AnimatedContainer class="about-tile-animated-container mobile {{if this.isTileView "closed"}}">
             {{#animated-if (or this.isTileView (eq this.currentSection 'about')) duration=900 use=this.transitionFade}}
               <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'about'}}>
-                <img class="about-tile-img-bg mobile" src="/images/code.jpg">
+                <img class="about-tile-img-bg mobile" src="/images/code1.jpg">
                 <img class="about-tile-img-text-1 mobile" src="/images/about.png">
               </div>
             {{/animated-if}}
@@ -403,7 +403,7 @@
           <AnimatedContainer class="about-tile-animated-container mobile {{if this.isTileView "closed"}}">
             {{#animated-if (or this.isTileView (eq this.currentSection 'career')) duration=900 use=this.transitionFade}}
               <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'career'}}>
-                <img class="about-tile-img-bg mobile" src="/images/career.jpg">
+                <img class="about-tile-img-bg mobile" src="/images/career1.jpg">
                 <img class="about-tile-img-text-2 mobile" src="/images/career.png">
               </div>
             {{/animated-if}}
@@ -411,7 +411,7 @@
           <AnimatedContainer class="about-tile-animated-container mobile {{if this.isTileView "closed"}}">
             {{#animated-if (or this.isTileView (eq this.currentSection 'education')) duration=900 use=this.transitionFade}}
               <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'education'}}>
-                <img class="about-tile-img-bg mobile" src="/images/education.jpg">
+                <img class="about-tile-img-bg mobile" src="/images/education1.jpg">
                 <img class="about-tile-img-text-3 mobile" src="/images/education.png">
               </div>
             {{/animated-if}}
@@ -419,8 +419,8 @@
           <AnimatedContainer class="about-tile-animated-container mobile {{if this.isTileView "closed"}}">
             {{#animated-if (or this.isTileView (eq this.currentSection 'awards')) duration=900 use=this.transitionFade}}
               <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'awards'}}>
-                <img class="about-tile-img-bg mobile" src="/images/awards.jpg">
-                <img class="about-tile-img-text-4 mobile" src="/images/awards.png">
+                <img class="about-tile-img-bg mobile" src="/images/awards1.jpg">
+                <img class="about-tile-img-text-4 mobile" src="/images/awardsTitle.png">
               </div>
             {{/animated-if}}
           </AnimatedContainer>
